<resources>
    <string name="app_name">RunsUp</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_duration">00:00:00</string>
    <string name="default_distance">0.00</string>
    <string name="default_pace">0.00</string>
    <string name="default_calories">0</string>
    <string name="stopwatch_stop">Pause Workout</string>
    <string name="stopwatch_continue">Continue Workout</string>
    <string name="pace_unit">min/km</string>
    <string name="distance_unit">km</string>
    <string name="calories_unit">kcal</string>
    <string name="stopwatch_endworkout">End Workout</string>
    <string name="stopwatch_start">Start</string>
    <string name="button_stopwatch_selectsport_default">Running</string>
    <string name="calories_label">Calories</string>
    <string name="pace_label">Pace</string>
    <string name="duration_label">Duration</string>
    <string name="distance_label">Distance</string>
    <string name="historysettings_actionsync">Synchronize with Cloud</string>
    <string name="workoutdetail_workoutname">My Workout (tap to edit)</string>
    <string name="workoutdetail_workoutname_default">My Workout</string>
    <string name="textview_workoutdetail_labelsport_default">Sport</string>
    <string name="textview_workoutdetail_sportactivity_default">Running</string>
    <string name="textview_workoutdetail_activitydate_default">Apr 24, 2017 6:10:52 PM"</string>
    <string name="textview_workoutdetail_labelsummary_default">Summary</string>
    <string name="textview_workoutdetail_labelduration_default">DURATION</string>
    <string name="textview_workoutdetail_labelcalories_default">CALORIES</string>
    <string name="textview_workoutdetail_valueduration_default">00:00:00"</string>
    <string name="textview_workoutdetail_valuecalories_default">0 kcal</string>
    <string name="textview_workoutdetail_labeldistance_default">DISTANCE</string>/
    <string name="textview_workoutdetail_labelavgpace_default">AVG. PACE</string>
    <string name="textview_workoutdetail_valueavgpace_default">0.00 min/km"</string>
    <string name="textview_workoutdetail_valuedistance_default">0.00 km</string>
    <string name="confirm_share_button_description">confirm share</string>
    <string name="no">Cancel</string>
    <string name="yes">confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">RunsUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_workout">Workout</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="all_unknownuser">Not Logged In</string>
    <string name="workoutmap_toast_instructions">Click on map to toggle position lock.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="all_actionsettings">Settings</string>
    <string name="all_actiondelete">Delete Workout</string>
    <string name="stopwatch_activeworkoutmap_button">Show Map</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean tempor, ligula vitae sollicitudin dignissim, dui massa bibendum lectus, sit amet posuere magna dui sed mauris. Nunc cursus facilisis justo nec venenatis. Nullam sodales, sapien molestie maximus molestie, justo neque consectetur neque, vitae accumsan nisi eros at sapien. Vestibulum at velit massa. Praesent eleifend condimentum mauris. Praesent risus ipsum, euismod vitae tempus ut, rutrum ac lacus.</string>
    <string-array name="pref_list_dist_units">
        <item>Kilometers (km)</item>
        <item>Miles (mi)</item>
    </string-array>
    <string-array name="pref_list_dist_units_values">
        <item>km</item>
        <item>mi</item>
    </string-array>
    <string name="pref_header_location">Location</string>
    <string name="pref_header_units">Units</string>
    <string name="pref_description_location_access">Allow this application to access your location</string>
    <string name="pref_title_location_access">Location Access</string>
    <string name="pref_title_set_dist_units">Distance Units</string>
    <string name="history_nohistorydata">No history to show</string>
    <string name="all_labeldistanceunitkilometers">km</string>
    <string name="all_labeldistanceunitmiles">mi</string>
    <string name="all_labelpaceunitkilometers">min/km</string>
    <string name="all_labelpaceunitmiles">min/mi</string>
    <string name="all_labelcaloriesunit">kcal</string>
    <string name="dismiss">dismiss</string>
    <string name="go_to_settings">go to settings</string>
    <string name="historysettings_actionclearhistory">Delete History</string>
    <string name="historysettings_action_refresh">Refresh</string>
    <string name="map_preview_not_available"><![CDATA[<Map preview not available>]]></string>
    <string name="alertTitle_location">Access To Location</string>
    <string name="alertTitle_location_message">Please turn on location access in the application\'s settings for the best experience.</string>
    <string name="sport_activity_selection_title">Select Activity</string>
    <string name="alerttitle_stop_workout">Stop Workout</string>
    <string name="alertbody_stop_workout">Are you sure you want to end this workout?</string>
    <string name="map_marker_current_location">Your Current Location</string>
    <string name="alterttitle_login_activity_signout">Sign Out</string>
    <string name="alert_sign_out_message">Are you sure you want to sign out from RunsUp?</string>
    <string name="alerttitle_sync_error">Synchronization Error</string>
    <string name="alertmessage_sync_error">There was an error when trying to synchronize your workouts with the cloud.</string>
    <string name="alerttitle_delete_history">Delete History</string>
    <string name="alertmessage_delete_history">Are you sure you want to delete your local history? You cannot undo this action.</string>
    <string name="alerttitle_delete_workout">Delete Workout</string>
    <string name="alertmessage_delete_workout">Are you sure you want to delete this workout? You cannot undo this action.</string>
    <string name="workout_parameters">Workout Parameters</string>
    <string name="send_workout_to_a_friend">Send Workout to a Friend</string>
    <string name="chart_elevation_title">Elevation</string>
    <string name="chart_pace_title">Pace</string>
    <string name="chart_calories_title">Calories Burned (Accumulated)</string>
    <string name="params_toast_instructions">Use the slider below to view details of your workout in 10 minute sections.</string>
    <string name="title_activity_messaging">Messages</string>
    <string name="menu_messages">Messages</string>
    <string name="messages_sender_profile_image">sender\'s profile image</string>
    <string name="title_activity_friends">Friends</string>
    <string name="menu_friends">Friends</string>
    <string name="message_no_friends">No friends to show.</string>
    <string name="alerttitle_sync_fail">Synchronization Error</string>
    <string name="alertmessage_sync_fail">Synchronization failed due to error.</string>
    <string name="alerttitle_sync_success">Synchronization Successful</string>
    <string name="alertmessage_sync_success">Your workouts have successfuly been synchronized with the cloud!</string>
    <string name="friendssearch_button_search">Search for Users</string>
    <string name="friendssearch_no_results">No Results</string>
    <string name="dialogtitle_friend_request">Friend Request</string>
    <string name="dialogmessage_friend_request">Send friend request?</string>
    <string name="menu_shared">Shared Workouts</string>
    <string name="friends_friend_requests_title">Friend Requests</string>
    <string name="alerttitle_friendrequest_error">Error</string>
    <string name="alertmessage_friendrequest_message">Error accepting friend request!</string>
    <string name="alerttitle_friendrequest_success">Success</string>
    <string name="alertmessage_friendrequest_success">Friend request accepted!</string>
    <string name="alertmessage_message_success_sent">Friend request sent!</string>
    <string name="accept">Accept</string>
    <string name="alerttitle_respond_friendrequest">Respond to Friend Request</string>
    <string name="alertmessage_respond_friendrequest">Accept of reject friend request?</string>
    <string name="send">Send</string>
    <string name="alerttitle_sendmessage">Send Message</string>
    <string name="alertmessage_sendmessage">Enter Your Message</string>
    <string name="alertmessage_sendclick_message">Choose action</string>
    <string name="alrertbutton_unfriend">Unfriend</string>
    <string name="alertoption_send">Send message</string>
    <string name="success">Success</string>
    <string name="alertmessage_unfriend">Friend removal successful</string>
    <string name="error">Error</string>
    <string name="alertmessage_unfriend_error">Error occurred</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_unfriend">Are you sure you want to unfriend this person?</string>
    <string name="friends_since">Friends Since:</string>
    <string name="dialog_friend_select_title">Select Friend To Share Your Workout With</string>
    <string name="exittext_message_hint">Your Message</string>
    <string name="user_profile_image">user\'s profile image</string>
    <string name="messages_menuitem_delete">Delete Conversation</string>
    <string name="menu_messaging">Messaging</string>
    <string name="messaging_no_friends_toast">Search for friends to start messaging!</string>
    <string name="conversation_title">Conversation with %s</string>
    <string name="future_impl">To be implemented in the next version!</string>
</resources>
