<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Main Menu">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_workout"
                android:icon="@drawable/running"
                android:title="@string/menu_workout" />
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_history" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_messaging"
                android:icon="@drawable/close_envelope"
                android:title="@string/menu_messages" />
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/friends"
                android:title="@string/menu_friends" />
        </menu>
    </item>


</menu>
